# StellarScout

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.profiles  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml
.githooks/: pre-commit
.github/: BRANCH_PROTECTION.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-review.yml  docs.yml  release.yml  security.yml  tests.yml
analyzer/: Cargo.toml
analyzer/src/: analysis.rs  complexity.rs  lib.rs  main.rs  metrics.rs  performance.rs  report.rs
contract/: Cargo.toml
contract/src/: lib.rs
docs/: API.md  ARCHITECTURE.md  CI_CD_PIPELINE.md  USAGE.md
