[package]
name = "stellar_scout_analyzer"
version = "0.2.0"
edition = "2021"

[lib]
name = "stellar_scout_analyzer"
path = "src/lib.rs"

[[bin]]
name = "stellar-scout"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
wasmparser = "0.89.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
